--- a/track_expense/templates/edit.html
+++ b/track_expense/templates/edit.html
@@ -13,7 +13,14 @@
             </div>
 
 
-            
+            <div class="mx-10">
+                <div class="mb-5">
+                    <label class="font-semibold">Expense Amount</label>
+                </div>
+                <div class="border p-1">
+                    {{ expense_form.amount }}
+                </div>
+            </div>
 
             <div class="mx-10">
                 <div class="mb-5">
