--- a/track_expense/templates/edit.html
+++ b/track_expense/templates/edit.html
@@ -1,4 +1,4 @@
-{% extends 'myapp/base.html' %}
+{% extends 'base.html' %}
 {% block body %}
     <form method="post" class="shadow-lg m-10">
         {% csrf_token %}
