--- a/track_expense/templates/index.html
+++ b/track_expense/templates/index.html
@@ -54,7 +54,7 @@
         {% for expense in expenses %}
         <div class="expense-row flex flex-wrap px-20 py-5">
             <span class="font-bold">{{ expense.name }}</span>
-            <span class="font-bold">${{ expense.amount|intcomma }}</span>
+            <span class="font-bold">₹{{ expense.amount|intcomma }}</span>
             <span class="font-bold">{{ expense.date }}</span>
             <span class="font-bold">{{ expense.category }}</span>
              <span class="pl-24"><a href="{% url 'edit' expense.id %}">
@@ -73,7 +73,7 @@
         <!--Displaying total-->
         <div class="px-72 py-5">
         <span class="font-bold text-green-500">
-            Total : ${{ total_expenses.amount__sum|intcomma }}
+            Total : ₹{{ total_expenses.amount__sum|intcomma }}
         </span>
         </div>
        
@@ -86,21 +86,21 @@
         <div class="w-1/3 shadow-lg ml-10 rounded-lg">
             <h1 class="ml-10 font-bold text-gray-500">LAST 365 DAYS</h1>
             <h1 class="ml-10 my-5 text-2xl text-green-500 font-bold">
-                ${{ yearly_sum.amount__sum|intcomma }}
+                ₹{{ yearly_sum.amount__sum|intcomma }}
             </h1>
         </div>
 
         <div class="w-1/3 shadow-lg ml-10 rounded-lg">
             <h1 class="ml-10 font-bold text-gray-500">LAST 30 DAYS</h1>
             <h1 class="ml-10 my-5 text-2xl text-green-500 font-bold">
-                ${{ monthly_sum.amount__sum|intcomma }}
+                ₹{{ monthly_sum.amount__sum|intcomma }}
             </h1>
         </div>
 
         <div class="w-1/3 shadow-lg ml-10 rounded-lg">
             <h1 class="ml-10 font-bold text-gray-500">LAST 7 DAYS</h1>
             <h1 class="ml-10 my-5 text-2xl text-green-500 font-bold">
-                ${{ weekly_sum.amount__sum|intcomma }}
+                ₹{{ weekly_sum.amount__sum|intcomma }}
             </h1>
         </div>
     </div>
