--- a/track_expense/static/app/style.css
+++ b/track_expense/static/app/style.css
@@ -9,3 +9,20 @@ div.expense-header span, div.expense-row span{
     display: table-cell;
     text-align: center;
 }
+
+/* .toggle-btn{
+    background: #4864ff;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.toggle-btn img{
+    width: 25px;
+    margin-left: 10px;
+} */
