--- a/track_expense/templates/base.html
+++ b/track_expense/templates/base.html
@@ -17,8 +17,24 @@
                 <img class="h-10 mr-3" src="{% static 'app/images/wallet.png' %}" alt="">
                 <span class="self-center text-xl font-semibold">Expense Tracker</span>
             </a>
+
+            
+            <div class="toggle-btn" id="btn">
+                <span>Dark</span>
+                <img src="../static/app/images/moon.png" alt="">
+            </div>
+
         </div>
+        
+
+
     </nav>
+    <script>
+        let btn = document.getElementById('btn');
+        btn.onclick = function(){
+            document.body.classList.toggle("dark-theme")
+        }
+    </script>
     {% block body %}
     {% endblock %}
 </body>
