--- a/track_expense/templates/register.html
+++ b/track_expense/templates/register.html
@@ -2,39 +2,46 @@
 {% block body %}
 
 {% csrf_token %}
-<div class="m-10 font-bold">Log In</div>
-<form class="shadow-lg m-10 rounded-lg" method="post">
+<form class="shadow-lg m-10 rounded-lg center" id="register-form" style="display:flex; flex-direction: column; margin: 100px; margin-left: 500px; margin-right: 500px; margin-top: 150px; padding: 50px 0px 50px 0px;" method="post">
 
     <div class="mx-10">
-        <div class="mb-5">
-             <label>Company name</label>
-             <input type="text" class="border">
+        <div class="mb-5" style="display: flex; justify-items: first baseline;">
+            <ul>
+                <li>
+                    <label>Company name:</label>
+                    <input type="text" class="border">
+                </li>
+            </ul>
          </div>
     </div>
     
     <div class="mx-10">
-        <div class="mb-5">
-             <label>Email id:</label>
-             <input type="text" class="border">
+        <div class="mb-5" style="display: flex; justify-content: end; ">
+            <ul>
+                <li>
+                    <label>Email id:</label>
+                    <input type="text" class="border">
+                </li>
+            </ul>
          </div>
     </div>
     
     <div class="mx-10">
-        <div class="mb-5">
+        <div class="mb-5" style="display: flex; justify-items: end;">
              <label>Password:</label>
              <input type="text" class="border">
          </div>
     </div>
     
     <div class="mx-10">
-        <div class="mb-5">
+        <div class="mb-5" style="display: flex; justify-content: space-between;">
              <label>Mobile no:</label>
              <input type="text" class="border">
          </div>
     </div>
     
     <div class="mx-10 mt-8">
-        <button class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Add</button>
+        <button class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Register</button>
     
     </div>
 </form>
