--- a/track_expense/templates/register.html
+++ b/track_expense/templates/register.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load humanize %}
 {% block body %}
 
-{% csrf_token %}
-<form class="shadow-lg m-10 rounded-lg center" id="register-form" style="display:flex; flex-direction: column; margin: 100px; margin-left: 500px; margin-right: 500px; margin-top: 150px; padding: 50px 0px 50px 0px;" method="post">
 
+<form class="shadow-lg m-10 rounded-lg center" id="register-form" style="display:flex; flex-direction: column; margin: 100px; margin-left: 500px; margin-right: 500px; margin-top: 150px; padding: 50px 0px 50px 0px;" method="post">
+    {% csrf_token %}
     <div class="mx-10">
         <div class="mb-5" style="display: flex; justify-items: first baseline;">
             <ul>
                 <li>
                     <label>Company name:</label>
-                    <input type="text" class="border">
+                    {{ user_form.name }}
                 </li>
             </ul>
          </div>
@@ -20,7 +22,7 @@
             <ul>
                 <li>
                     <label>Email id:</label>
-                    <input type="text" class="border">
+                    {{ user_form.gmail }}
                 </li>
             </ul>
          </div>
@@ -29,19 +31,19 @@
     <div class="mx-10">
         <div class="mb-5" style="display: flex; justify-items: end;">
              <label>Password:</label>
-             <input type="text" class="border">
+             {{ user_form.password }}
          </div>
     </div>
     
     <div class="mx-10">
         <div class="mb-5" style="display: flex; justify-content: space-between;">
              <label>Mobile no:</label>
-             <input type="text" class="border">
+             {{ user_form.phone }}
          </div>
     </div>
     
     <div class="mx-10 mt-8">
-        <button class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Register</button>
+        <button type="submit" class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Register</button>
     
     </div>
 </form>
