--- a/track_expense/templates/login.html
+++ b/track_expense/templates/login.html
@@ -18,15 +18,17 @@
     <div class="mx-10">
         <div class="mb-5" style="display: flex; justify-items: end;">
              <label>Password:</label>
-             
-              {{ login_form.password }}
+            {{ login_form.password }}
          </div>
     </div>
     {{error}}
     
     <div class="mx-10 mt-8">
         <button type="submit" class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Log In</button>
+        <a class="bg-blue-500 px-5 py-2 rounded-lg text-white font-bold" href="{% url 'register' %}">REGISTER</a>
+       
     </div>
+
 </form>
 
 {% endblock %}
