--- a/track_expense/templates/register.html
+++ b/track_expense/templates/register.html
@@ -43,8 +43,8 @@
     </div>
     
     <div class="mx-10 mt-8">
-        <button type="submit" class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Register</button>
-    
+        <button type="submit" class="bg-blue-500 px-5 py-2 rounded-lg text-white font-bold">Register</button>
+        <a class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold" href="{% url 'login' %}">Login</a>
     </div>
 </form>
 
