--- a/track_expense/templates/login.html
+++ b/track_expense/templates/login.html
@@ -7,6 +7,7 @@
 <form class="shadow-lg m-10 rounded-lg center" id="register-form" style="display:flex; flex-direction: column; margin: 100px; margin-left: 500px; margin-right: 500px; margin-top: 150px; padding: 50px 0px 50px 0px;" method="post">
     {% csrf_token %}
     
+    Login
     <div class="mx-10">
         <div class="mb-5" style="display: flex; justify-content: end; ">
             <label>Email id:</label>
