--- a/track_expense/templates/index.html
+++ b/track_expense/templates/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="mx-10 mt-8">
-                <button class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Add</button>
+                <button type="submit" class="bg-green-500 px-5 py-2 rounded-lg text-white font-bold">Add</button>
 
             </div>
            
@@ -120,7 +120,7 @@
                     </div>
                     <div class="flex flex-wrap px-20 py-5">
                         <span class="text-green-500">
-                            $ {{daily_sum.sum}}
+                            ₹ {{daily_sum.sum}}
                         </span>
                     </div>
                 {% endfor %}
@@ -139,9 +139,10 @@
                             {{categorical_sum.category}}
                         </span>
                     </div>
+                    
                     <div class="flex flex-wrap px-20 py-5">
                         <span class="text-green-500">
-                            $ {{categorical_sum.sum}}
+                             {{categorical_sum.sum}}
                         </span>
                     </div>
                 {% endfor %}
